# slack-review-bot

./: .dockerignore  .gitignore  Dockerfile  Pipfile  balabit_config.py  bot.py  config.json  config.mm  cronjob.py  database.py  db.py  docker-start.sh  dumb_config  gerrit-slack-bot.py  gerrit.py  gerrit_slack_bot.py  pyproject.toml  rtm.py  schema.sql  secret_key.py  slack.py  uwsgi.ini
config/: @valaki.json
configs/: platform.json  scb-best.json
gerrit_responses/: 1000071.json  33324_change.json  best_changes.json  best_changes_DETAILED_ACCOUNTS.json  best_changes_DETAILED_LABELS.json  change.json
jobs/: __init__.py  scb_best.py
lib/: uwsgicache.py
slack_messages/: oauth.access.json  slack_message_formats.py
systemd/: gerrit-slack-bot.service  gerrit-slack-bot.timer
tests/: test_gerrit.py  test_slack.py
web/: __init__.py  app.py  config.py  db.sqlite3  manage.py  views.py
web/slackbot/: admin.py  apps.py  channels.py  context_processors.py  forms.py  models.py  views.py
web/slackbot/migrations/: 0001_initial.py  0002_auto_20180227_0049.py  0003_auto_20180304_1931.py  0004_auto_20181031_1028.py  0005_reviewrequest.py
web/templates/: base.html  crontab_base.html  crontab_form.html  edit.html  edit_crontab.html  home.html  index.html  new.html  new_crontab.html  usage.html
web/web/: settings.py  urls.py
