[tool.black]
exclude = "migrations/"

[tool.poetry]
name = "slackbot"
version = "3.1"
description = "Gerrit-Slack bot"
authors = ["Kiss György <kissgyorgy@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.6"
django = "2.1.5"
django-constance = {version = "^4.0.0",extras = ["database"]}
django-crispy-forms = "*"
django-widget-tweaks = "*"
croniter = "*"
aiohttp = "*"
envparse = "*"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.2"
pytest-sugar = "^0.9.2"
ipython = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
