[tool.black]
exclude = "migrations/"

[tool.poetry]
name = "slackbot"
version = "3.1"
description = "Gerrit-Slack bot"
authors = ["Kiss György <kissgyorgy@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">= 3.6"
django = "4.2.16"
django-constance = {version = "^2.3",extras = ["database"]}
django-crispy-forms = "*"
django-widget-tweaks = "*"
croniter = "*"
aiohttp = "*"
envparse = "*"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^8.0.0"
pytest-sugar = "^0.9.2"
ipython = "^8.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
